# bharatbricks

./: .gitignore  AGENTS.md  LICENSE  README.md  app.yaml  hello.py  pyproject.toml  requirements.txt
app/: backend.py  main.py
app/static/: app.jsx  index.html  styles.css
docs/: deployment.md  track1-nyaya-sahayak.md  track2-rail-drishti.md  track3-digital-artha.md  track4-swatantra.md
scripts/: preflight.py  quickstart.py  start_app.py
src/arxiv_distil/: __init__.py
